begin section for simultaneous model

--- a/two-groups.tex
+++ b/two-groups.tex
@@ -771,6 +771,13 @@ Now as to when this case occurs
 \end{itemize}
 
 \newpage
+\section{Simultaneous Model}
+For most of the parameter space, there is no PSNE. What must a MSNE look like?
+\begin{itemize}
+	\item In a fully mixed strategy equilibrium, a probability distribution $F_b$ over strategies $$\bm{b_1} = \left(b_{-.5,1},b_{0,1},b_{.5,1}\right),\bm{b_2},\ldots$$ must make Vote Buyer $A$ indifferent between at least two vectors of strategies $$\bm{a_1} = \left(a_{-.5,1},a_{0,1},a_{.5,1}\right),\bm{a_2}$$
+\end{itemize}
+
+\newpage
 \section{Numerical Results}	
 For all of these, $\beta = 1$ and there are three legislators with $b\in\left\{-\frac{1}{2},0,\frac{1}{2}\right\}$.
 \begin{itemize}
