--- a/draft.tex
+++ b/draft.tex
@@ -97,7 +97,7 @@ Below we introduce an innovative methodology for quantifying cross-industry poli
 \subsection{Related Literature}
 \label{sec:lit}
 
-This work relates to the literature on vote-buying and legislative behavior in political science (Groseclose and Snyder (1996), Dekel et. al. (2005), Dal Bo (2007)) as well as to the canonical studies on endogenous regulation (cf. Stigler (1975), Peltzman (1976), Becker (1983), Laffont and Tirole (1994)).
+This work relates to the literature on vote-buying and legislative behavior in political science (Groseclose and Snyder (1996), Dekel et. al. (2005), Dal Bo (2007)) as well as to the canonical studies on endogenous regulation (cf. Stigler (1975), Peltzman (1976), Becker (1983), Laffont and Tirole (1994)).  By putting legislators in the place of voters and lobbyists in the place of candidates, the idea can been seen as similar to that of the probabilistic voting models that incorporate policy motivation such as Roemer (1997).
 
 Also related is Le Breton and Salanie (2003), which studies lobbying when the lobby is uncertain about the preferences of a unitary decision maker. Le Breton and Zaporozhets (2007) go a step further and replace the unitary decision maker with a legislature with multiple actors. Song (2008) is a model of endogenous lobbying with a ratification constraint in a context of unilateral policy making with no uncertainty, and Coates and Ludema (2001) study trade policy leadership in a model with endogenous lobbying in the presence of political uncertainty with imperfect monitoring.
 
@@ -614,6 +614,8 @@ In this example, the optimal bribe offer function for Vote Buyer $A$ is to offer
 \item Peltzman, S. (1976), ``Toward a More General Theory of Regulation.'' {\em Journal of Law and Economics} 19, 211-248.
 
 \item Poole, K. T. (2005), ``Spatial Models of Parliamentary Voting.'' New York: Cambridge University Press.
+
+\item Roemer, J. (1997), ``Political-economic Equilibrium when Parties Represent Constituents: The Unidimensional Case.'' {\em Social Choice and Welfare} 14, 479-502.
 
 \item Saiegh, S. (2009), ``Political  Prowess or Lady Luck? Evaluating Chief Executives' Legislative Success Rates,'' {\em The Journal of Politics}, 71, 1342-1356.
 
