remove B subscript on a few X's since I don't use it elsewhere in presentation

--- a/presentation.tex
+++ b/presentation.tex
@@ -106,7 +106,7 @@
 \begin{enumerate}[<+->]
 	\item In the U.S., about $\$ 4$ billion / yr spent on lobbying and campaign contributions
 	\item There is usually lobbying on both sides of a given issue
-	\item Moderate legislators receive more contributions than those that are ideologically extreme
+	\item Moderate legislators receive more contributions than those who are ideologically extreme
 	\item Legislators about whom there is a moderate level of uncertainty are lobbied the most
 \end{enumerate}
 
@@ -393,7 +393,7 @@ FOCs look the same for Vote Buyer B, e.g.
 		\begin{itemize}
 			\item Either one root at zero, or
 			\pause
-			\item Two roots and only larger one (at $X_B>0$?) satisfies SOC
+			\item Two roots and only larger one (at $X>0$?) satisfies SOC
 		\end{itemize}
 
 \vskip.1in
@@ -406,7 +406,7 @@ For Vote Buyer A,
 	\vskip-.15in
 	\pause
 		\begin{itemize}
-			\item One root: zero or $X_B<0$
+			\item One root: zero or $X<0$
 		\end{itemize}
 
 
