update presentation with dates for GLPETC

--- a/writing/output/presentation.tex
+++ b/writing/output/presentation.tex
@@ -53,9 +53,9 @@
 
 \title[Lobbying and Legislative Uncertainty\hspace{2.95in}\insertframenumber/\inserttotalframenumber]{Lobbying and Legislative Uncertainty}
 \author[Buzard and Saiegh]{Kristy Buzard\inst{1} \and Sebastian Saiegh\inst{2}}
-\institute{\inst{1}Syracuse University and The Wallis Institute \\ \url{kbuzard@syr.edu} \and 
+\institute{\inst{1}Syracuse University \\ \url{kbuzard@syr.edu} \and 
 \inst{2}UC San Diego}
-\date{May 10, 2016}
+\date{September 15, 2017}
 \begin{document}
 \maketitle
 %\insertpresentationendpage removed b/c of appendix
@@ -112,7 +112,7 @@
 
 \pause
 \vskip.2in
-Adding uncertainty to standard model captures (2) --- (4)
+Adding uncertainty to standard model captures (2) -- (4)
 \end{frame}
 
 
